Prevent layout shift due to scrollbar

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -111,12 +111,18 @@
 }
 
 @layer base {
+  html {
+    scrollbar-gutter: stable;
+  }
+
   * {
     @apply border-border outline-ring/50;
   }
+
   body {
     @apply bg-background text-foreground;
   }
+
   button:not([disabled]),[role="button"]:not([disabled]) {
     cursor: pointer;
   }
